--- a/front/package.json
+++ b/front/package.json
@@ -15,10 +15,13 @@
     "antd": "^4.16.13",
     "next": "^9.5.5",
     "next-images": "^1.8.1",
+    "next-redux-wrapper": "^6.0.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.15.8",
+    "react-redux": "^7.2.0",
+    "redux": "^4.1.1",
     "styled-components": "^5.3.1",
     "yup": "^0.32.9"
   }
