--- a/front/package.json
+++ b/front/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next"
+    "dev": "next",
+    "build": "next build"
   },
   "author": "OSH",
   "license": "ISC",
@@ -22,6 +23,8 @@
     "react-hook-form": "^6.15.8",
     "react-redux": "^7.2.0",
     "redux": "^4.1.1",
+    "redux-actions": "^2.6.5",
+    "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.1",
     "yup": "^0.32.9"
   }
