--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^1.3.7",
     "antd": "^4.16.13",
+    "emoji-picker-react": "^3.4.8",
     "next": "^9.5.5",
     "next-images": "^1.8.1",
     "next-redux-wrapper": "^6.0.2",
