--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.15.8",
     "react-redux": "^7.2.0",
+    "react-slick": "^0.28.1",
     "redux": "^4.1.1",
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.9",
