--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^1.3.7",
     "antd": "^4.16.13",
+    "axios": "^0.21.4",
     "emoji-picker-react": "^3.4.8",
     "next": "^9.5.5",
     "next-images": "^1.8.1",
@@ -27,6 +28,7 @@
     "redux": "^4.1.1",
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.3.1",
     "yup": "^0.32.9"
   }
