--- a/front/package.json
+++ b/front/package.json
@@ -29,6 +29,7 @@
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
+    "shortid": "^2.2.16",
     "styled-components": "^5.3.1",
     "yup": "^0.32.9"
   }
