--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.15.8",
+    "react-loading": "^2.0.3",
     "react-redux": "^7.2.0",
     "react-slick": "^0.28.1",
     "redux": "^4.1.1",
