가짜데이터로 데이터 만들기, 무한 스크롤링 기능 추가, user saga immer 적용

--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "antd": "^4.16.13",
     "axios": "^0.21.4",
     "emoji-picker-react": "^3.4.8",
+    "faker": "^5.5.3",
     "immer": "^9.0.6",
     "next": "^9.5.5",
     "next-images": "^1.8.1",
