--- a/front/package.json
+++ b/front/package.json
@@ -28,6 +28,7 @@
     "react-loading": "^2.0.3",
     "react-redux": "^7.2.0",
     "react-slick": "^0.28.1",
+    "react-virtualized": "^9.22.3",
     "redux": "^4.1.1",
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.9",
